fix(navigation): change placeholder color on mobile search

--- a/packages/themes/src/bootstrap/artbasel/scss/forms/_navbar_mobile_search.scss
+++ b/packages/themes/src/bootstrap/artbasel/scss/forms/_navbar_mobile_search.scss
@@ -27,11 +27,11 @@
     color: $color-mch-black;
 
     &::placeholder {
-      color: $color-mch-gray-300;
+      color: $color-mch-gray-400;
     }
   }
 
-  &.hover .form-control::placeholder {
+  &.focus .form-control::placeholder {
     color: $color-mch-gray-400;
   }
 }
